crates/ra_ide_api/src/snapshots/tests__highlighting.snap
---
created: "2019-03-23T16:20:31.394314144Z"
creator: insta@0.7.1
source: crates/ra_ide_api/src/syntax_highlighting.rs
expression: result
---
Ok(
    [
        HighlightedRange {
            range: [1; 11),
            tag: "comment"
        },
        HighlightedRange {
            range: [12; 14),
            tag: "keyword"
        },
        HighlightedRange {
            range: [15; 19),
            tag: "function"
        },
        HighlightedRange {
            range: [29; 37),
            tag: "macro"
        },
        HighlightedRange {
            range: [38; 50),
            tag: "string"
        },
        HighlightedRange {
            range: [52; 54),
            tag: "literal"
        }
    ]
)
