crates/ra_ide_api/src/snapshots/tests__inlay_hints.snap
---
created: "2019-07-20T20:13:53.385368Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/inlay_hints.rs
expression: hints
---
[
    InlayHint {
        range: [71; 75),
        text: "let test = 54;",
        inlay_kind: LetBinding,
    },
    InlayHint {
        range: [90; 94),
        text: "let test = InnerStruct {};",
        inlay_kind: LetBinding,
    },
    InlayHint {
        range: [121; 125),
        text: "let test = OuterStruct {};",
        inlay_kind: LetBinding,
    },
    InlayHint {
        range: [152; 156),
        text: "let test = vec![222];",
        inlay_kind: LetBinding,
    },
    InlayHint {
        range: [178; 186),
        text: "let mut test = Vec::new();",
        inlay_kind: LetBinding,
    },
    InlayHint {
        range: [229; 233),
        text: "let test = test.into_iter().map(|i| i * i).collect::<Vec<_>>();",
        inlay_kind: LetBinding,
    },
    InlayHint {
        range: [258; 259),
        text: "i",
        inlay_kind: ClosureParameter,
    },
    InlayHint {
        range: [297; 305),
        text: "let mut test = 33;",
        inlay_kind: LetBinding,
    },
    InlayHint {
        range: [417; 426),
        text: "let i_squared = i * i;",
        inlay_kind: LetBinding,
    },
    InlayHint {
        range: [500; 506),
        text: "let (x, c) = (42, \'a\');",
        inlay_kind: LetBinding,
    },
    InlayHint {
        range: [528; 532),
        text: "let test = (42, \'a\');",
        inlay_kind: LetBinding,
    },
]
