crates/ra_ide_api/src/snapshots/tests__rainbow_highlighting.snap
---
created: "2019-05-25T11:21:56.117898Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/syntax_highlighting.rs
expression: result
---
Ok(
    [
        HighlightedRange {
            range: [1; 3),
            tag: "keyword",
            id: None,
        },
        HighlightedRange {
            range: [4; 8),
            tag: "variable",
            id: Some(
                5766414492220109266,
            ),
        },
        HighlightedRange {
            range: [17; 20),
            tag: "keyword",
            id: None,
        },
        HighlightedRange {
            range: [21; 26),
            tag: "variable",
            id: Some(
                15975256018338854530,
            ),
        },
        HighlightedRange {
            range: [29; 36),
            tag: "string",
            id: None,
        },
        HighlightedRange {
            range: [42; 45),
            tag: "keyword",
            id: None,
        },
        HighlightedRange {
            range: [46; 47),
            tag: "variable",
            id: Some(
                176272420896316891,
            ),
        },
        HighlightedRange {
            range: [50; 55),
            tag: "variable",
            id: Some(
                15975256018338854530,
            ),
        },
        HighlightedRange {
            range: [56; 65),
            tag: "text",
            id: None,
        },
        HighlightedRange {
            range: [73; 76),
            tag: "keyword",
            id: None,
        },
        HighlightedRange {
            range: [77; 78),
            tag: "variable",
            id: Some(
                15061637676198917049,
            ),
        },
        HighlightedRange {
            range: [81; 86),
            tag: "variable",
            id: Some(
                15975256018338854530,
            ),
        },
        HighlightedRange {
            range: [87; 96),
            tag: "text",
            id: None,
        },
        HighlightedRange {
            range: [105; 108),
            tag: "keyword",
            id: None,
        },
        HighlightedRange {
            range: [109; 110),
            tag: "variable",
            id: Some(
                1714508680417729339,
            ),
        },
        HighlightedRange {
            range: [113; 134),
            tag: "string",
            id: None,
        },
        HighlightedRange {
            range: [140; 143),
            tag: "keyword",
            id: None,
        },
        HighlightedRange {
            range: [144; 145),
            tag: "variable",
            id: Some(
                15953336624848413466,
            ),
        },
        HighlightedRange {
            range: [148; 149),
            tag: "variable",
            id: Some(
                1714508680417729339,
            ),
        },
        HighlightedRange {
            range: [150; 159),
            tag: "text",
            id: None,
        },
    ],
)
