crates/ra_ide_api/src/snapshots/tests__rename_mod.snap
---
created: "2019-05-23T22:23:35.215905447Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/references.rs
expression: "&source_change"
---
Some(
    SourceChange {
        label: "rename",
        source_file_edits: [
            SourceFileEdit {
                file_id: FileId(
                    2,
                ),
                edit: TextEdit {
                    atoms: [
                        AtomTextEdit {
                            delete: [4; 7),
                            insert: "foo2",
                        },
                    ],
                },
            },
        ],
        file_system_edits: [
            MoveFile {
                src: FileId(
                    3,
                ),
                dst_source_root: SourceRootId(
                    0,
                ),
                dst_path: "bar/foo2.rs",
            },
        ],
        cursor_position: None,
    },
)
