crates/ra_ide_api/src/snapshots/tests__sematic_highlighting.snap
---
created: "2019-05-25T10:25:13.898113Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/syntax_highlighting.rs
expression: result
---
Ok(
    [
        HighlightedRange {
            range: [1; 3),
            tag: "keyword",
            id: None,
        },
        HighlightedRange {
            range: [4; 8),
            tag: "variable",
            id: Some(
                17119830160611610240,
            ),
        },
        HighlightedRange {
            range: [17; 20),
            tag: "keyword",
            id: None,
        },
        HighlightedRange {
            range: [21; 26),
            tag: "variable",
            id: Some(
                2744494144922727377,
            ),
        },
        HighlightedRange {
            range: [29; 36),
            tag: "string",
            id: None,
        },
        HighlightedRange {
            range: [42; 45),
            tag: "keyword",
            id: None,
        },
        HighlightedRange {
            range: [46; 47),
            tag: "variable",
            id: Some(
                10375904121795371996,
            ),
        },
        HighlightedRange {
            range: [50; 55),
            tag: "variable",
            id: Some(
                2744494144922727377,
            ),
        },
        HighlightedRange {
            range: [56; 65),
            tag: "text",
            id: None,
        },
        HighlightedRange {
            range: [73; 76),
            tag: "keyword",
            id: None,
        },
        HighlightedRange {
            range: [77; 78),
            tag: "variable",
            id: Some(
                8228548264153724449,
            ),
        },
        HighlightedRange {
            range: [81; 86),
            tag: "variable",
            id: Some(
                2744494144922727377,
            ),
        },
        HighlightedRange {
            range: [87; 96),
            tag: "text",
            id: None,
        },
    ],
)
